[package]
name = "proc-hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
blake2 = "0.10.6"
docify = "0.2.0"
hex = "0.4.3"
md5 = "0.7.0"
proc-macro2 = "1.0.64"
quote = "1.0.29"
sha3 = "0.10.8"
syn = "2.0.25"
