[package]
name = "proc-hash"
version = "0.1.2"
edition = "2021"
license-file = "LICENSE"
description = "Embed hashed strings at compile time"
repository = "https://github.com/lucascherzer/proc-hash"
categories = ["development-tools::build-utils"]
keywords = ["hash", "macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
blake2 = "0.10.6"
docify = "0.2.9"
hex = "0.4.3"
md5 = "0.7.0"
proc-macro2 = "1.0.93"
quote = "1.0.38"
sha3 = "0.10.8"
syn = "2.0.98"
whirlpool = "0.10.4"
